fixed video width on mobile

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -186,6 +186,12 @@ img {
   object-fit: cover;
 }
 
+iframe {
+  @include mobile {
+    width: 100%;
+  }
+}
+
 .wrap {
   width: 90%;
   @include notmobile {
